--- a/app/src/main/res/drawable/btn_normal_selector.xml
+++ b/app/src/main/res/drawable/btn_normal_selector.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/main_theme_light_blue" />
-    <corners android:radius="6dip" />
+    <solid android:color="@color/login_button" />
+    <corners android:radius="5dip" />
 </shape>
