--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="login_line">#8a8a8a</color>
     <color name="login_button">#666666</color>
     <color name="login_button_light">#595959</color>
+    <color name="white">#ffffff</color>
 </resources>
