--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <resources>
     <color name="linear_pressed">#ffebebeb</color>
     <color name="light_gray">#ffa2a2a2</color>
+    <color name="black">#000000</color>
     <color name="viewfinder_mask">#60000000</color>
     <color name="main_theme_blue">#8dcc3f</color>
     <color name="main_theme_light_blue">#84cc2b</color>
